Fix incorrect spacing in Header items

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -5,20 +5,11 @@
 
 .navigation {
   font-size: 1.7rem;
-  width: 100%;
-
-  @media (width >= 600px) {
-    width: fit-content;
-  }
 }
 
 .navigation-list {
   display: flex;
   justify-content: space-between;
-
-  @media (width >= 600px) {
-    gap: 20px;
-  }
 }
 
 .navigation-list__item {
